fixed readability on first table. added rules.

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,32 @@ tbody tr td {
 .table th, .table td {
     padding: 4px 8px;
 }
+
+.odd {
+    background-color: #FFFFFF;
+}
+
+.even {
+    background-color: #efefef;
+}
+
+.container {
+    width: 100%;
+    height: 200px;
+    margin: 50px 0px;
+    padding: 10px;
+}
+
+.left {
+    width: 50%;
+    height: 200px;
+    float: left;
+}
+
+.right {
+    margin-left: 60%;
+    width: 20%;
+    padding: 15px;
+    height: 200px;
+    background-color: #c6c6c6;
+}
